Chore: Improve annotation processing in `RequestValidator` and handle reflective instantiation exceptions